challenge list + added magma bound

--- a/changelog.html
+++ b/changelog.html
@@ -24,7 +24,7 @@
     <ul class = "nav">
       <li class = "redir"><a class="active-nav-item" href="changelog.html">Changelog</a></li>
       <li class = "redir"><a href="leaderboard.html">Leaderboard</a></li>
-      <li class = "redir"><a href="extended.html">Extended List</a></li>
+      <li class = "redir"><a href="extended.html">Challenge List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
       <li class = "titlebox">GD Personal Demon List</li>
@@ -33,7 +33,7 @@
         <div id="myDropdown" class="dropdown-content">
           <a href="homepage.html">About</a>
           <a href="index.html">Main List</a>
-          <a href="extended.html">Extended List</a>
+          <a href="extended.html">Challenge List</a>
           <a href="leaderboard.html">Leaderboard</a>
           <a class="active-nav-item" href="changelog.html">Changelog</a>
         </div>
@@ -45,6 +45,19 @@
         <h1 style = "text-align:center">Changelog</h1>
         <p style = "text-align:center">Every change that this list has ever experienced (after the creation of this new Website), sorted by most recent at the top and least recent towards the bottom.</p>
         <p style = "text-align:center">Looking for the <a href = "sitechanges.html" target = "_blank">website changelog?</a></p>
+        <div class = "column">
+          <div class = "card">
+            <button class = "collapsible">
+               <div class = "title">
+                <h3 class = "date">February 18, 2024 Changes:</h3>
+               </div>
+             </button>
+             <div class = "content">
+               <p dir="ltr" >Removed the<strong>Extended List</strong> and replaced it with the <strong>Challenge List</strong>.</p>
+               <p dir="ltr" ><strong>Magma Bound</strong> has been placed at #21.</p>
+            </div>
+          </div>
+        </div>
        <div class = "column">
         <div class = "card">
           <button class = "collapsible">
