--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,7 @@
     <ul class = "nav">
       <li class = "redir"><a href="changelog.html">Changelog</a></li>
       <li class = "redir"><a href="leaderboard.html">Leaderboard</a></li>
-      <li class = "redir"><a href="extended.html">Extended List</a></li>
+      <li class = "redir"><a href="extended.html">Challenge List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a class="active-nav-item" href="homepage.html">About</a></li>
       <li class = "titlebox">GD Personal Demon List</li>
@@ -37,7 +37,7 @@
         <div id="myDropdown" class="dropdown-content">
           <a class="active-nav-item" href="homepage.html">About</a>
           <a href="index.html">Main List</a>
-          <a href="extended.html">Extended List</a>
+          <a href="extended.html">Challenge List</a>
           <a href="leaderboard.html">Leaderboard</a>
           <a href="changelog.html">Changelog</a>
         </div>
@@ -71,7 +71,7 @@
             </ul>
             <h2>Other List Rules</h2>
             <ul>
-              <li>All levels on this list need to be rated demons.</li>
+              <li>All levels on this list need to be rated demons, though also unrated levels can be placed on the List if they are of quality.</li>
               <li>If a verification video is not present for a Level, then the video of the first victor on a Level will be used.</li>
               <li>We accept new levels but only those of Hard Demon Difficulty or above as to not spam the List with random Levels. This Rule is highly subject to change to higher requirement, for example Insane Demons and above.</li>
               <li>Please do not submit multiple records of the same record (don't submit dupes or i will smite you, or just not accept the record, have patience)!</li>
