--- a/extended.html
+++ b/extended.html
@@ -24,7 +24,7 @@
    <ul class = "nav">
       <li class = "redir"><a href="changelog.html">Changelog</a></li>
       <li class = "redir"><a href="leaderboard.html">Leaderboard</a></li>
-      <li class = "redir"><a class="active-nav-item" href="extended.html">Extended List</a></li>
+      <li class = "redir"><a class="active-nav-item" href="extended.html">Challenge List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
       <li class = "titlebox">GD Personal Demon List</li>
@@ -33,15 +33,15 @@
         <div id="myDropdown" class="dropdown-content">
           <a href="homepage.html">About</a>
           <a href="index.html">Main List</a>
-          <a class="active-nav-item" href="extended.html">Extended List</a>
+          <a class="active-nav-item" href="extended.html">Challenge List</a>
           <a href="leaderboard.html">Leaderboard</a>
           <a href="changelog.html">Changelog</a>
         </div>
       </li>
     </ul>
     <div id="levels-container"> 
-      <h1 style = "text-align:center">Extended Demons List</h1>
-      <p style = "text-align:center">All of these levels are still very hard, but they don't quite make the cut for the Top 75. They still award points, though, and basically function the same way as the Main List.<br> Want to submit a record? Submit it <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">here!</a></p>
+      <h1 style = "text-align:center">Challenge Demons List</h1>
+      <p style = "text-align:center">This is the Challenge List Tab of the Website, funcions the same way as the Main List.<br> Want to submit a record? Submit it <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">here!</a></p>
     </div>
     <script src="/JS/collapsible.js?v=2020-10-05"></script>
     <script src="/JS/extended.js?v=2020-10-29"></script>
