--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <ul class = "nav">
       <li class = "redir"><a href="changelog.html">Changelog</a></li>
       <li class = "redir"><a href="leaderboard.html">Leaderboard</a></li>
-      <li class = "redir"><a href="extended.html">Extended List</a></li>
+      <li class = "redir"><a href="extended.html">Challenge List</a></li>
       <li class = "redir"><a class="active-nav-item" href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
       <li class = "titlebox">GD Personal Demon List</li>
@@ -32,7 +32,7 @@
         <div id="myDropdown" class="dropdown-content">
           <a href="homepage.html">About</a>
           <a class="active-nav-item" href="index.html">Main List</a>
-          <a href="extended.html">Extended List</a>
+          <a href="extended.html">Challenge List</a>
           <a href="leaderboard.html">Leaderboard</a>
           <a href="changelog.html">Changelog</a>
         </div>
