--- a/extended.html
+++ b/extended.html
@@ -40,7 +40,7 @@
       </li>
     </ul>
     <div id="levels-container"> 
-      <h1 style = "text-align:center">Challenge Demons List</h1>
+      <h1 style = "text-align:center">Challenge List</h1>
       <p style = "text-align:center">This is the Challenge List Tab of the Website, funcions the same way as the Main List.<br> Want to submit a record? Submit it <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">here!</a></p>
     </div>
     <script src="/JS/collapsible.js?v=2020-10-05"></script>
