--- a/homepage.html
+++ b/homepage.html
@@ -61,6 +61,7 @@
             <h2>Record Submission Rules</h2>
             <ul>
               <li>Achieved the record without using hacks (however, FPS bypass is allowed, up to 360fps).</li>
+              <li>2.2 Completions are allowed but have to preferably be stated if it was completed in 2.2 or not.</li>
               <li>Achieved the record on the level that is listed on the site - please check the level ID before you submit a record or submit a new level.</li>
               <li>2 Player Demons need to have been beaten SOLO to be accepted.</li>
               <li>Do not use secret routes or bug routes, you can use skips as long as they don't skip a whole part and instead just skip for example 2-3 clicks.</li>
