added challenge list link

--- a/homepage.html
+++ b/homepage.html
@@ -112,6 +112,7 @@
             </ul>
             <h2>Other useful links</h2>
             <p>Record submission form: <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform</a></p>
+            <p>Record submission form: <a href = "https://rexingtec.github.io/index.html" target = "_blank">The Personal Challenge List Website</a></p>
           </div>
         </div>
       </div>
