--- a/changelog.html
+++ b/changelog.html
@@ -24,7 +24,6 @@
     <ul class = "nav">
       <li class = "redir"><a class="active-nav-item" href="changelog.html">Changelog</a></li>
       <li class = "redir"><a href="leaderboard.html">Leaderboard</a></li>
-      <li class = "redir"><a href="extended.html">Challenge List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
       <li class = "titlebox">GD Personal Demon List</li>
@@ -33,7 +32,6 @@
         <div id="myDropdown" class="dropdown-content">
           <a href="homepage.html">About</a>
           <a href="index.html">Main List</a>
-          <a href="extended.html">Challenge List</a>
           <a href="leaderboard.html">Leaderboard</a>
           <a class="active-nav-item" href="changelog.html">Changelog</a>
         </div>
@@ -53,7 +51,7 @@
                </div>
              </button>
              <div class = "content">
-               <p dir="ltr" >Removed the <strong>Extended List</strong> and replaced it with the <strong>Challenge List</strong>.</p>
+               <p dir="ltr" >Removed the <strong>Extended List</strong> and instead of replacing it created a new website, <strong>The Personal Challenge List</strong>.
                <p dir="ltr" ><strong>Magma Bound</strong> has been placed at #21.</p>
             </div>
           </div>
