--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,6 @@
     <ul class = "nav">
       <li class = "redir"><a href="changelog.html">Changelog</a></li>
       <li class = "redir"><a href="leaderboard.html">Leaderboard</a></li>
-      <li class = "redir"><a href="extended.html">Challenge List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a class="active-nav-item" href="homepage.html">About</a></li>
       <li class = "titlebox">GD Personal Demon List</li>
@@ -37,7 +36,6 @@
         <div id="myDropdown" class="dropdown-content">
           <a class="active-nav-item" href="homepage.html">About</a>
           <a href="index.html">Main List</a>
-          <a href="extended.html">Challenge List</a>
           <a href="leaderboard.html">Leaderboard</a>
           <a href="changelog.html">Changelog</a>
         </div>
@@ -112,7 +110,7 @@
             </ul>
             <h2>Other useful links</h2>
             <p>Record submission form: <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform</a></p>
-            <p>Record submission form: <a href = "https://rexingtec.github.io/index.html" target = "_blank">The Personal Challenge List Website</a></p>
+            <p><a href = "https://rexingtec.github.io/index.html" target = "_blank">The Personal Challenge List Website</a></p>
           </div>
         </div>
       </div>
