pitfall, light it up, thermodynamix

--- a/changelog.html
+++ b/changelog.html
@@ -47,6 +47,21 @@
           <div class = "card">
             <button class = "collapsible">
                <div class = "title">
+                <h3 class = "date">March 19, 2024 Changes:</h3>
+               </div>
+             </button>
+             <div class = "content">
+               <p dir="ltr" ><strong>PITFALL</strong> has been placed at #5, below <strong>doradura</strong> and above <strong>Disruption</strong>.</p>
+               <p dir="ltr" ><strong>Light It Up</strong> has been placed at #10, below <strong>FISH FISH GODMODE</strong> and above <strong>Glisten</strong>.</p>
+               <p dir="ltr" ><strong>Thermodynamix</strong> has been placed at #35, below <strong>Windy Landscape</strong> and above <strong>BEATDEMON</strong>.</p>
+               <p dir="ltr" >These Changes push both <strong>Glisten</strong> and <strong>Hypersonic</strong> out of the Top 10. </p>
+            </div>
+          </div>
+        </div>
+        <div class = "column">
+          <div class = "card">
+            <button class = "collapsible">
+               <div class = "title">
                 <h3 class = "date">February 18, 2024 Changes:</h3>
                </div>
              </button>
